# predictx

./: .gitignore  CLAUDE.md  PredictX_HybridUX_Prototype.html  PredictX_Snapchat_UX.html  PredictX_System_Architecture.html  PredictX_UX_Strategy_Research.md  RG_IMPLEMENTATION_SUMMARY.md  TESTING_RG_FEATURES.md
.github/workflows/: market-service.yml  matching-engine.yml  order-service.yml  resolution-service.yml  settlement-service.yml  wallet-service.yml
apps/mobile/: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING.md  README.md  SIZE_OPTIMIZATION.md  app.json  jest.config.js  package.json  tsconfig.json
apps/mobile/src/: App.tsx  setupTests.ts
services/market-service/: .env.example  Dockerfile  go.mod
services/market-service/migrations/: 000001_create_markets.down.sql  000001_create_markets.up.sql
services/market-service/proto/: market.proto
services/matching-engine/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
services/matching-engine/migrations/: 000001_create_trades.down.sql  000001_create_trades.up.sql
services/matching-engine/proto/: matching.proto
services/matching-engine/src/: config.rs  main.rs  metrics.rs
services/matching-engine/src/api/grpc/: server.rs
services/matching-engine/src/api/http/: router.rs
services/matching-engine/src/cache/: redis.rs
services/matching-engine/src/domain/: error.rs  mod.rs  order.rs  trade.rs
services/matching-engine/src/engine/: amm.rs  matching.rs  mod.rs  order_book.rs
services/matching-engine/src/events/: consumer.rs  mod.rs  publisher.rs  types.rs
services/matching-engine/src/market/: manager.rs
services/matching-engine/src/store/: db.rs  mod.rs  trade_repo.rs  wal.rs
services/order-service/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum
services/order-service/migrations/: 000001_create_orders.down.sql  000001_create_orders.up.sql
services/order-service/proto/: order.proto
services/resolution-service/: .env.example  Dockerfile  pyproject.toml
services/resolution-service/resolution_service/: __init__.py  ai_validator.py  api.py  appeals.py  community.py  config.py  database.py  events.py  insurance.py  judges.py  main.py  models.py  resolvers.py  tasks.py  test_tasks.py
services/settlement-service/: .env.example  Dockerfile  go.mod  go.sum
services/settlement-service/migrations/: 000001_create_positions.down.sql  000001_create_positions.up.sql  000002_create_settlements.down.sql  000002_create_settlements.up.sql
services/wallet-service/: .env.example  Dockerfile  go.mod
services/wallet-service/proto/: wallet.proto
services/websocket-gateway/: .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  mix.exs
(+137 files in other folders)
