[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# RocksDB WAL
rocksdb = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flatbuffers = "24.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
thiserror = "1"
anyhow = "1"
envy = "0.4"
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Concurrency
once_cell = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tokio-test = "0.4"
