[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predictx-resolution-service"
version = "1.0.0"
description = "PredictX market resolution service — automated APIs, manual judges, appeals, insurance fund"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database (async PostgreSQL)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Settings
    "pydantic-settings>=2.0.0",

    # Celery + Redis broker
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # Kafka
    "aiokafka>=0.10.0",

    # HTTP client (external APIs)
    "httpx>=0.27.0",

    # Anthropic Claude API
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",       # TestClient
    "respx>=0.21.0",       # mock httpx
    "freezegun>=1.4.0",    # freeze datetime in tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["resolution_service"]
